feat: css nesting module started

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
       <div class="injected-readme">
         <!-- inject:readme:md -->
-        <h1 id="heading">Heading</h1>
-<p>All content of this front page is injected directly from <code>introduction.md</code></p>
-<h2 id="subheading">Subheading</h2>
+        <h1 id="css-training">CSS Training</h1>
+<p>With Vivek M Agarwal</p>
+<br>
+<br>
+
+
 
         <!-- endinject -->
       </div>
@@ -29,6 +32,7 @@
       <div class='toc'>
         <h2 class="no-margin">Index of pages</h1>
         <ul><!-- inject:html -->
+          <li><a href="pages/css-nesting-module/index.html">Css nesting module</a></li>
           <!-- endinject -->
         </ul>
       </div>
