--- a/pages/css-nesting-module/index.html
+++ b/pages/css-nesting-module/index.html
@@ -30,6 +30,8 @@
 
 <p>In the tweet Adam Argyle linked to the latest <a href="https://t.co/Q7IK7gbhdG?amp=1">CSS Nesting Module</a> draft that Tab Atkins and he are working on.</p>
 <p>✍️ <strong>Here are the few points that we are going to cover in this lesson:</strong></p>
+<br>
+
 <ol>
 <li>We will begin by understand the problems that common CSS pre-processors like Sass solves using nesting.</li>
 <li>Look at some limitations of using pre-processors all the time.</li>
@@ -262,8 +264,18 @@
 </code></pre>
 <p>Feel free to practice and play around with the The nesting selector <code>&amp;</code> and the <code>@nest</code> at-rule <a href="https://jsfiddle.net/drupalastic/4cw9k63n/137/"><strong>here</strong></a></p>
 <h2 id="practical-css-nesting-exercises">Practical CSS Nesting Exercises</h2>
-<p>may be intentionally break things and ask them to fix.</p>
-<p>In the video I may say that I have provided practice-fiddle and solution-fiddle both for you. but I&#39;ll encourage you to try out things yourself before peeking into the solution.</p>
+<h3 id="exercise-1">Exercise 1.</h3>
+<p>Modify the practice-fiddle to just make the color of the <code>li</code>&#39;s inside <code>ul</code> red by making use of <code>@nest</code> at-rule
+<img src="img/ex-1.png" alt=""> </p>
+<p><a href="https://jsfiddle.net/drupalastic/4cw9k63n/166/"><strong>practice-fiddle</strong></a> | <a href="https://jsfiddle.net/drupalastic/4cw9k63n/165/"><strong>solution-fiddle</strong></a></p>
+<h3 id="exercise-2">Exercise 2.</h3>
+<p>Fix the following broken practice-fiddle, The <code>li</code>&#39;s doesn&#39;t look black in the practice-fiddle.
+<img src="img/ex-2.png" alt=""></p>
+<p><a href="https://jsfiddle.net/drupalastic/4cw9k63n/171/"><strong>practice-fiddle</strong></a> | <a href="https://jsfiddle.net/drupalastic/4cw9k63n/169/"><strong>solution-fiddle</strong></a></p>
+<h3 id="exercise-3">Exercise 3.</h3>
+<p>Fix the following broken practice-fiddle. The <code>li</code>&#39;s doesn&#39;t look black in the practice-fiddle.
+<img src="img/ex-2.png" alt=""></p>
+<p><a href="https://jsfiddle.net/drupalastic/4cw9k63n/177/"><strong>practice-fiddle</strong></a> | <a href="https://jsfiddle.net/drupalastic/4cw9k63n/169/"><strong>solution-fiddle</strong></a></p>
 
         <!-- endinject -->
       </div>
