css module examples finalised.

--- a/pages/css-nesting-module/index.html
+++ b/pages/css-nesting-module/index.html
@@ -26,8 +26,7 @@
         <!-- inject:readme:md -->
         <h1 id="css-nesting-module">Css Nesting Module</h1>
 <p>Adam Arglye&#39;s recent tweet super excited me 🤩. But why?</p>
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">@ Nest Level 1 (draft)<br><br>`@ nest &gt; div &gt; &amp; { color: red }`<br>`foo { &amp; bar { color: red } }`<a href="https://t.co/Q7IK7gbhdG">https://t.co/Q7IK7gbhdG</a></p>&mdash; Adam Argyle (@argyleink) <a href="https://twitter.com/argyleink/status/1369318354163437568?ref_src=twsrc%5Etfw">March 9, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+<p><img src="img/tweet.png" alt=""></p>
 <p>In the tweet Adam Argyle linked to the latest <a href="https://t.co/Q7IK7gbhdG?amp=1">CSS Nesting Module</a> draft that Tab Atkins and he are working on.</p>
 <p>✍️ <strong>Here are the few points that we are going to cover in this lesson:</strong></p>
 <br>
