css module examples finalised.

--- a/pages/css-nesting-module/index.html
+++ b/pages/css-nesting-module/index.html
@@ -25,6 +25,10 @@
         class="injected-readme">
         <!-- inject:readme:md -->
         <h1 id="css-nesting-module">Css Nesting Module</h1>
+<div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://www.loom.com/embed/faddd5964da6434b93bc4e1827368497" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+
+
+
 <p>Adam Arglye&#39;s recent tweet super excited me 🤩. But why?</p>
 <p><img src="img/tweet.png" alt=""></p>
 <p>In the tweet Adam Argyle linked to the latest <a href="https://t.co/Q7IK7gbhdG?amp=1">CSS Nesting Module</a> draft that Tab Atkins and he are working on.</p>
