responsive image page added.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h2 class="no-margin">Index of pages</h1>
         <ul><!-- inject:html -->
           <li><a href="pages/css-nesting-module/index.html">Css nesting module</a></li>
+          <li><a href="pages/responsive-images/index.html">Responsive images</a></li>
           <!-- endinject -->
         </ul>
       </div>
