responsive image page added.

--- a/pages/responsive-images/index.html
+++ b/pages/responsive-images/index.html
@@ -49,6 +49,9 @@
 
       <div id="app"></div>
 
+      <h2>Video Walkthrough</h2>
+      <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://www.loom.com/embed/c38a633346314a659cb2de16f03ccfed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+
       <div class="injected-readme"><!-- inject:readme:md -->
         <!-- endinject -->
       </div>
